Source/WebCore/layout/inlineformatting/InlineContentBreaker.h
@@ -118,7 +118,7 @@ public:
 
 private:
     Result processOverflowingContent(const ContinuousContent&, const LineStatus&) const;
-    OverflowingTextContent processOverflowingTextContent(const ContinuousContent&, const LineStatus&) const;
+    OverflowingTextContent processOverflowingContentWithText(const ContinuousContent&, const LineStatus&) const;
     Optional<PartialRun> tryBreakingTextRun(const ContinuousContent::Run& overflowRun, InlineLayoutUnit logicalLeft, Optional<InlineLayoutUnit> availableWidth) const;
 
     enum class WordBreakRule {
